--- a/index.html
+++ b/index.html
@@ -3,7 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- Primary Meta Tags -->
+    <title>Invoice app</title>
+    <meta name="title" content="Invoice app" />
+    <meta
+      name="description"
+      content="you can add product , calculate and print"
+    />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://metatags.io/" />
+    <meta property="og:title" content="Invoice app" />
+    <meta
+      property="og:description"
+      content="you can add product , calculate and print"
+    />
+    <meta
+      property="og:image"
+      content="https://cdn.pixabay.com/photo/2015/09/16/08/12/toy-shopping-cart-942362_640.jpg"
+    />
+
+    <!-- X (Twitter) -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://metatags.io/" />
+    <meta property="twitter:title" content="Invoice app" />
+    <meta
+      property="twitter:description"
+      content="you can add product , calculate and print"
+    />
+    <meta
+      property="twitter:image"
+      content="https://cdn.pixabay.com/photo/2015/09/16/08/12/toy-shopping-cart-942362_640.jpg"
+    />
+
+    <!-- Meta Tags Generated with https://metatags.io -->
+    <link rel="icon" href="./public/invoice.png" type="image/png" />
     <link rel="stylesheet" href="./src/style.css" />
   </head>
   <body class="dark:bg-gray-950 duration-300 custom-container-light">
@@ -63,10 +98,20 @@
         <div class="max-w-5xl mx-auto">
           <div class="flex items-center justify-between">
             <div class="flex flex-col gap-0.5">
-              <h1 class="text-3xl dark:text-gray-50 duration-300 animate__animated animate__fadeIn  ">Brands</h1>
-              <p class="text-lg dark:text-blue-500 duration-300 animate__animated animate__fadeIn animate__slow custom-delay-500 ">Invoice app</p>
+              <h1
+                class="text-3xl dark:text-gray-50 duration-300 animate__animated animate__fadeIn"
+              >
+                Brands
+              </h1>
+              <p
+                class="text-lg dark:text-blue-500 duration-300 animate__animated animate__fadeIn animate__slow custom-delay-500"
+              >
+                Invoice app
+              </p>
             </div>
-            <div class="animate__animated animate__fadeIn custom-delay-1000 print:hidden">
+            <div
+              class="animate__animated animate__fadeIn custom-delay-1000 print:hidden"
+            >
               <!-- From Uiverse.io by JustCode14 -->
               <label class="switch">
                 <input checked="true" id="themeSwitch" type="checkbox" />
@@ -88,13 +133,15 @@
         </div>
       </header>
 
-      <section class="mb-5 animate__animated animate__fadeIn  custom-delay-1500 print:hidden">
+      <section
+        class="mb-5 animate__animated animate__fadeIn custom-delay-1500 print:hidden"
+      >
         <div class="max-w-5xl mx-auto">
           <div
             class="p-5 dark:bg-gray-400/10 dark:backdrop-blur-sm rounded-xl bg-gray-400/10 backdrop-blur-sm"
           >
             <form action="#" id="recordForm">
-              <div class="grid grid-cols-4 gap-3 ">
+              <div class="grid grid-cols-4 gap-3">
                 <select
                   name="record_select"
                   class="col-span-2 py-3 px-4 pe-9 block w-full border-gray-200 rounded-lg text-sm focus:border-blue-500 focus:ring-blue-500 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-900 dark:border-neutral-700 dark:text-neutral-400 dark:placeholder-neutral-500 dark:focus:ring-neutral-600"
@@ -127,7 +174,9 @@
       </section>
 
       <section>
-        <div class="max-w-5xl mx-auto animate__animated animate__fadeIn custom-delay-2000">
+        <div
+          class="max-w-5xl mx-auto animate__animated animate__fadeIn custom-delay-2000"
+        >
           <div class="flex flex-col">
             <div class="-m-1.5 overflow-x-auto">
               <div class="p-1.5 min-w-full inline-block align-middle">
@@ -232,7 +281,7 @@
             <div class="max-w-5xl mx-auto mb-10">
               <div class="flex items-start justify-between">
                 <div class="flex flex-col gap-0.5">
-                  <h1 class="text-3xl dark:text-gray-50 duration-300 ">
+                  <h1 class="text-3xl dark:text-gray-50 duration-300">
                     Brands
                   </h1>
                   <p class="text-lg dark:text-blue-500 duration-300">
@@ -242,7 +291,7 @@
                 <!-- From Uiverse.io by catraco -->
                 <button
                   title="Add New"
-                  class="group cursor-pointer hover:rotate-90 duration-300 "
+                  class="group cursor-pointer hover:rotate-90 duration-300"
                   id="closeSidebarBtn"
                 >
                   <svg
@@ -265,7 +314,10 @@
           </div>
           <div class="">
             <div class="max-w-5xl mx-auto">
-              <div class="grid grid-cols-3 gap-3 max-sm:grid-cols-2" id="productGroup"></div>
+              <div
+                class="grid grid-cols-3 gap-3 max-sm:grid-cols-2"
+                id="productGroup"
+              ></div>
             </div>
           </div>
 
@@ -314,25 +366,27 @@
           <div class="flex justify-end gap-2 py-3">
             <button
               type="button"
-              class=" print:hidden py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 animate__animated animate__fadeIn  custom-delay-2500"
+              class="print:hidden py-3 px-4 inline-flex items-center gap-x-2 text-sm font-medium rounded-lg border border-gray-200 bg-white text-gray-800 shadow-2xs hover:bg-gray-50 focus:outline-hidden focus:bg-gray-50 disabled:opacity-50 disabled:pointer-events-none dark:bg-neutral-800 dark:border-neutral-700 dark:text-white dark:hover:bg-neutral-700 dark:focus:bg-neutral-700 animate__animated animate__fadeIn custom-delay-2500"
               id="manageInventoryBtn"
             >
               Manage Inventory
             </button>
             <button
               type="button"
-              class=" print:hidden py-3 px-4 text-sm font-medium rounded-lg border border-transparent bg-teal-500 text-white hover:bg-teal-600 focus:outline-hidden focus:bg-teal-600 disabled:opacity-50 disabled:pointer-events-none animate__animated animate__fadeIn custom-delay-3000"
+              class="print:hidden py-3 px-4 text-sm font-medium rounded-lg border border-transparent bg-teal-500 text-white hover:bg-teal-600 focus:outline-hidden focus:bg-teal-600 disabled:opacity-50 disabled:pointer-events-none animate__animated animate__fadeIn custom-delay-3000"
               id="printBtn"
             >
               Print
             </button>
           </div>
           <p
-            class=" print:hidden font-mono text-sm text-center dark:text-gray-400 duration-300"
+            class="print:hidden font-mono text-sm text-center dark:text-gray-400 duration-300"
           >
             &copy; <span id="copyright"></span> AKM. All right reserved.
           </p>
-          <p class="text-sm text-center dark:text-gray-400 hidden print:block">Thank your for buying our products.</p>
+          <p class="text-sm text-center dark:text-gray-400 hidden print:block">
+            Thank your for buying our products.
+          </p>
         </div>
       </footer>
       <template id="productTemplate">
@@ -361,7 +415,7 @@
             1000
           </td>
           <td
-            class="flex justify-end items-center  px-6  py-4 whitespace-nowrap text-right text-sm text-gray-800 dark:text-neutral-200"
+            class="flex justify-end items-center px-6 py-4 whitespace-nowrap text-right text-sm text-gray-800 dark:text-neutral-200"
           >
             <button class="active:scale-95 quantity-decrease-btn">
               <svg
